RESOLVED FIXED75405
REGRESSION (WebKit2): Cursor, hover states not updated when page scrolls under stationary mouse pointer
https://bugs.webkit.org/show_bug.cgi?id=75405
Summary REGRESSION (WebKit2): Cursor, hover states not updated when page scrolls unde...
mitz
Reported 2011-12-31 11:26:54 PST
REGRESSION (WebKit2): Cursor, hover states not updated when page scrolls under stationary mouse pointer
Attachments
Move the mechanism that sends a fake mouse moved event on scroll from WebHTMLView to WebCore::FrameView (9.96 KB, patch)
2011-12-31 11:50 PST, mitz
andersca: review+
mitz
Comment 1 2011-12-31 11:50:15 PST
Created attachment 120830 [details] Move the mechanism that sends a fake mouse moved event on scroll from WebHTMLView to WebCore::FrameView This breaks -[WebView setHoverFeedbackSuspended:]. I have filed bug 75406 to address this.
mitz
Comment 2 2011-12-31 17:04:28 PST
Nikolas Zimmermann
Comment 3 2012-01-13 02:12:56 PST
This caused two regressions, please see bug 76254. Can anyone investigate, or shall we roll this out? The affected tests are failing on the bots since this year :(
Note You need to log in before you can comment on or make changes to this bug.