Source/WebCore: WebCore changes for: REGRESSION (WebKit2): Cursor, hover states not updated when page scrolls under stationary mouse pointer https://bugs.webkit.org/show_bug.cgi?id=75405

Reviewed by Anders Carlsson.

Test: fast/events/frame-scroll-fake-mouse-move.html

* page/FrameView.cpp:
(WebCore::FrameView::scrollPositionChanged): Added a call to
EventHandler::dispatchFakeMouseMoveEventSoon().

Source/WebKit/mac: WebKit/mac changes for: REGRESSION (WebKit2): Cursor, hover states not updated when page scrolls under stationary mouse pointer
https://bugs.webkit.org/show_bug.cgi?id=75405

Reviewed by Anders Carlsson.

Removed the WebKit/mac mechanism for dispatching fake mouse moved events
when an HTML frame scrolls, since FrameView now does this.

* WebView/WebHTMLView.mm:
(-[WebHTMLViewPrivate dealloc]): Removed an assertion about a removed ivar.
(-[WebHTMLView _updateMouseoverWithFakeEvent]): Removed call to
-_cancelUpdateMouseoverTimer.
(-[WebHTMLView _frameOrBoundsChanged]): Removed code to schedule a timer
for dispatching a mouse moved event on scroll.
(-[WebHTMLView close]): Removed call to _cancelUpdateMouseoverTimer.
(-[WebHTMLView viewWillMoveToWindow:]): Ditto.
(-[WebHTMLView mouseDown:]): Ditto.

LayoutTests: REGRESSION (WebKit2): Cursor, hover states not updated when page scrolls under stationary mouse pointer
https://bugs.webkit.org/show_bug.cgi?id=75405

Reviewed by Anders Carlsson.

* fast/events/frame-scroll-fake-mouse-move-expected.txt: Added.
* fast/events/frame-scroll-fake-mouse-move.html: Copied from
LayoutTests/fast/events/overflow-scroll-fake-mouse-move.html and adapted to page scrolling.



Canonical link: https://commits.webkit.org/92165@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103867 268f45cc-cd09-0410-ab3c-d52691b4dbfc